added image elements

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Home</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
+    <header>
+      <h1>Yellowstone</h1>
+    </header>
+    <main>
+      <img src="images/lake-yellowstone.png" alt="Lake Yellowstone">
+      <img src="images/lake.png" alt="A lake at Yellowstone National Park">
+      <img src="images/tetons.png" alt="Grand Teton in the Distance">
+      <img src="images/water-plains.png" alt="Plains at Yellowstone">
+      <img src="images/waterfall.png" alt="Artist Point Waterfall">
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
