--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yellowstone Photos</title>
     <link rel="stylesheet" href="screen.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
   </head>
   <body>
     <header>
       <h1>Yellowstone</h1>
     </header>
     <main>
-      <img src="images/lake-yellowstone.png" alt="Lake Yellowstone">
-      <img src="images/lake.png" alt="A lake at Yellowstone National Park">
-      <img src="images/tetons.png" alt="Grand Teton in the Distance">
-      <img src="images/water-plains.png" alt="Plains at Yellowstone">
-      <img src="images/waterfall.png" alt="Artist Point Waterfall">
+      <img class="photo1" src="images/lake-yellowstone.png" alt="Lake Yellowstone">
+      <img class="photo2" src="images/lake.png" alt="A lake at Yellowstone National Park">
+      <img class="photo3" src="images/tetons.png" alt="Grand Teton in the Distance">
+      <img class="photo4" src="images/water-plains.png" alt="Plains at Yellowstone">
+      <img class="photo5" src="images/waterfall.png" alt="Artist Point Waterfall">
     </main>
     <script src="index.js"></script>
   </body>
